# Az-Core

./: .env  .gitignore  ARCHITECTURE.md  FRAMEWORK_ARCHITECTURE.md  FRAMEWORK_SUMMARY.md  IMPROVEMENTS_ANALYSIS.md  IMPROVEMENT_SUGGESTIONS.md  MIGRATION.md  README.md  config.yml  pyproject.toml  requirements.txt  rise.py  setup.py  test1.py  test10.py  test11.py  test12.py  test13.py  test14.py  test2.py  test3.py  test4.py  test6.py  test7.py  test8.py  test9.py
.github/workflows/: publish.yml
arc/: __init__.py  exceptions.py
arc/agents/: __init__.py  agent_factory.py  agent_judge.py  agent_pattern_router.py  agent_registry.py  agent_router.py  mcp_team_builder.py  react_agent.py  reasoning_duo_agent.py  reflexion_agent.py  self_consistency_agent.py  team_builder.py
arc/config/: __init__.py  config.py  validation.py
arc/core/: __init__.py  base.py  orchestrator.py  state.py  supervisor.py
arc/nodes/: __init__.py  coordinator.py  generator.py  planner.py
arc/prompts/: __init__.py
arc/rl/: __init__.py  rewards.py  rl_manager.py
arc/utils/: __init__.py  agent_persistence.py  base_structure.py  cached_llm.py  caching.py  conversation.py  decorators.py  helpers.py  logging.py  output_formatter.py  prompts.py  retry.py
arc/workflows/: __init__.py  agent_rearrange.py  concurrent_workflow.py  forest_swarm.py  graph_workflow.py  group_chat.py  heavy_swarm.py  hierarchical_swarm.py  mixture_of_agents.py  sequential_workflow.py  swarm_router.py
arc_flow/: __init__.py
azcore/: __init__.py
azcore/cli/: __main__.py  main.py
azcore/config/: config.py
azcore/utils/: agent_persistence.py  base_structure.py  conversation.py
rise_framework/: __init__.py  exceptions.py
rise_framework/agents/: __init__.py  agent_factory.py  agent_judge.py  agent_pattern_router.py  agent_registry.py  agent_router.py  mcp_team_builder.py  react_agent.py  reasoning_duo_agent.py  reflexion_agent.py  self_consistency_agent.py  team_builder.py
rl_data/: example_comprehensive.pkl  example_decay.pkl  example_optimized.pkl  example_switching.pkl  example_thompson.pkl  example_ucb.pkl  q_table_self_consistency.pkl  simple_decay.pkl  simple_prune.pkl  simple_thompson.pkl  simple_ucb.pkl  test_async_q_table.pkl  test_cache_q_table.pkl  test_decay_q_table.pkl  test_pruning_q_table.pkl  test_q_table.pkl  test_switch_q_table.pkl  test_thompson_q_table.pkl  test_ucb_q_table.pkl
(+56 files in other folders)
